# audio_sdk

./: .gitignore  README.md  pyproject.toml
data/: call_center_manual.txt
data/products/: ゲーム機 J87 Max.txt  スマートウォッチ B27 Max.txt  スマートスピーカー D47 Air.txt  スマートスピーカー F29 Pro.txt  スマートフォン C82 Lite.txt  スマートフォン E51 Mini.txt  スマートフォン G81 Standard.txt  タブレット A68 Air.txt  ワイヤレスイヤホン H61 Air.txt  ワイヤレスイヤホン I79 Pro.txt
data/qa/: call_center_qa.json  qa_set.json
src/audio_sdk/: main.py  my_workflow.py
src/audio_sdk/call_center/: call_center.py
src/audio_sdk/text_call_center/: call_center.py
src/audio_sdk/voice_call_center/: config.py  my_workflow.py  voice_call_center.py
